# Tiny3D

./: .gitignore  LICENSE  README.md
source/: .clang-format  .gitignore  CMakeLists.txt
source/CMake/Utils/: ProjectCMakeModule.cmake
source/Common/: ImGuiApp.h  ImGuiImpl.h  T3DEditorInfoDX11.h
source/Core/: CMakeLists.txt
source/Core/Editor/: CMakeLists.txt
source/Core/Include/: T3DConfig.h  T3DDegree.h  T3DDegree.inl  T3DEngineMacro.h  T3DErrorDef.h  T3DMath.h  T3DMath.inl  T3DMatrix2.h  T3DPrerequisites.h  T3DRadian.h  T3DTypedef.h  T3DVector2.h  T3DVector2.inl  T3DVector3.h  T3DVector3.inl  T3DVector4.h  T3DVector4.inl  Tiny3D.h
source/Core/Runtime/: CMakeLists.txt
source/Core/Source/: T3DPrerequisitesInternal.h  T3DRadian.cpp  T3DTypedefInternal.h  T3DVector2.cpp
source/Core/protobuf/: CommonScriptObject.pb.h  ShaderScriptObject.pb.h
source/Editor/: CMakeLists.txt
source/Editor/ImGuiImpl/: CMakeLists.txt
source/Editor/TinyEditor/: CMakeLists.txt  ConsoleWindow.cpp  ConsoleWindow.h  DockingWindow.cpp  DockingWindow.h  EditorApp.cpp  EditorApp.h  EditorEventDefine.h  EditorImGuiImpl.h  EditorMainWindow.cpp  EditorMainWindow.h  EditorPrerequisites.h  EditorRenderer.h  EditorScene.cpp  EditorScene.h  EditorSceneImpl.cpp  EditorSceneImpl.h  EditorWidgetID.h  GameWindow.cpp  GameWindow.h  HierarchyWindow.cpp  HierarchyWindow.h  InspectorWindow.cpp  InspectorWindow.h  MainWindow.cpp  MainWindow.h  NetworkManager.cpp  NetworkManager.h  ProjectManager.cpp  ProjectManager.h  ProjectSettings.cpp  ProjectSettings.h  ProjectWindow.cpp  ProjectWindow.h  SceneWindow.cpp  SceneWindow.h  TestScene.cpp  TestScene.h  TinyEditor.h  TinyEditorInitData.cpp  (+20 more)
source/Editor/TinyImGui/: CMakeLists.txt
source/Editor/TinyLauncher/: AppSettings.cpp  AppSettings.h  CMakeLists.txt  LauncherApp.cpp  LauncherApp.h  LauncherEvent.h  LauncherEventDefine.h  LauncherPrerequisites.h  LauncherWidgetID.h  LocalProjectsView.cpp  LocalProjectsView.h  MainWindow.cpp  MainWindow.h  NetworkManager.cpp  NetworkManager.h  NewProjectDlg.cpp  NewProjectDlg.h  ProjectManager.cpp  ProjectManager.h  main.cpp
source/Framework/: CMakeLists.txt
source/Framework/Include/: T3DEventErrorDef.h  T3DEventHandler.h  T3DEventMacro.h  T3DEventManager.h  T3DEventParam.h  T3DEventPrerequisites.h  T3DFramework.h
source/Framework/Source/: T3DEventHandler.cpp  T3DEventInstance.cpp  T3DEventManager.cpp  T3DEventParam.cpp
source/InputSystem/: CMakeLists.txt
source/InputSystem/Windows/: CMakeLists.txt
source/Log/: CMakeLists.txt
source/Log/Include/: T3DLog.h  T3DLogErrorDef.h  T3DLogPrerequisites.h  T3DLogger.h  T3DLoggerMacro.h
source/Log/Source/: T3DLogItem.cpp  T3DLogItem.h  T3DLogTask.cpp  T3DLogTask.h  T3DLogger.cpp
source/Math/: CMakeLists.txt
source/Math/Include/: T3DAabb.h  T3DAabb.inl  T3DColor4.h  T3DColorARGB.h  T3DColorRGB.h  T3DColorRGBA.h  T3DDegree.h  T3DDegree.inl  T3DFix32.h  T3DFix32.inl  T3DFix64.h  T3DFix64.inl  T3DFrustum.h  T3DIntrAabbAabb.h  T3DIntrAabbAabb.inl  T3DIntrAabbObb.h  T3DIntrAabbObb.inl  T3DIntrAabbPlane.h  T3DIntrAabbPlane.inl  T3DIntrFrustumAabb.h  T3DIntrFrustumAabb.inl  T3DIntrFrustumObb.h  T3DIntrFrustumObb.inl  T3DIntrFrustumSphere.h  T3DIntrFrustumSphere.inl  T3DIntrObbObb.h  T3DIntrObbObb.inl  T3DIntrObbPlane.h  T3DIntrObbPlane.inl  T3DIntrPointAabb.h  T3DIntrPointAabb.inl  T3DIntrPointFrustum.h  T3DIntrPointFrustum.inl  T3DIntrPointObb.h  T3DIntrPointObb.inl  T3DIntrPointSphere.h  T3DIntrPointSphere.inl  T3DIntrRayAabb.h  T3DIntrRayAabb.inl  T3DIntrRayObb.h  (+48 more)
source/Math/Source/: T3DColor4.cpp  T3DColorARGB.cpp  T3DColorRGB.cpp  T3DColorRGBA.cpp  T3DFix32.cpp  T3DFix64.cpp  T3DFrustum.cpp  T3DObb.cpp  T3DPlane.cpp  T3DReal.cpp  T3DSphere.cpp
source/Math/include/: T3DAabb.h  T3DAabb.inl  T3DDegree.inl  T3DFix32.h  T3DFix32.inl  T3DFix64.h  T3DFrustum.h  T3DMath.h  T3DMath.inl  T3DMathPrerequisites.h  T3DMatrix2.h  T3DMatrix3.h  T3DMatrix4.h  T3DMatrix4.inl  T3DObb.h  T3DObb.inl  T3DPlane.h  T3DQuaternion.h  T3DQuaternion.inl  T3DRadian.h  T3DRadian.inl  T3DRect.h  T3DSphere.h  T3DTransform.h  T3DVector2.h  T3DVector3.h  T3DVector4.h  T3DVector4.inl
source/Math/source/: T3DAabb.cpp  T3DFrustum.cpp  T3DMath.cpp  T3DMatrix2.cpp  T3DMatrix3.cpp  T3DMatrix4.cpp  T3DObb.cpp  T3DPlane.cpp  T3DQuaternion.cpp  T3DRect.cpp  T3DSphere.cpp  T3DTransform.cpp  T3DVector2.cpp  T3DVector3.cpp  T3DVector4.cpp
source/Platform/: CMakeLists.txt
source/Platform/Include/: T3DClass.h  T3DCommonErrorDef.h  T3DMacro.h  T3DNoncopyable.h  T3DPlatform.h  T3DPlatformErrorDef.h  T3DPlatformLib.h  T3DPlatformMacro.h  T3DPlatformPrerequisites.h  T3DSingleton.h  T3DSystem.h  T3DType.h
source/Platform/Source/: T3DPlatform.cpp  T3DSystem.cpp  T3DWindow.cpp
source/Plugins/: CMakeLists.txt
source/Plugins/Archive/: CMakeLists.txt
source/Plugins/ImageCodec/: CMakeLists.txt
source/Plugins/Renderer/: CMakeLists.txt
source/Projects/: generate-ninja.bat  generate-nmake.bat  generate-vs2019-x64-debug.bat  generate-vs2022-x64-debug.bat  generate-xcode-ios.sh  generate-xcode-osx.sh  refresh-vs2019-x64.bat  setup_env.bat  start_vsenv.bat
source/Reflect/: CMakeLists.txt
source/RenderSystems/: CMakeLists.txt
source/RenderSystems/Direct3D11/: CMakeLists.txt
source/RenderSystems/Direct3D9/: CMakeLists.txt
source/RenderSystems/OpenGL3Plus/: CMakeLists.txt
source/RenderSystems/OpenGLES2/: CMakeLists.txt
source/RenderSystems/OpenGLES3/: CMakeLists.txt
source/Renderer/: CMakeLists.txt
source/Renderer/Direct3D11/: CMakeLists.txt
source/Renderer/Direct3D9/: CMakeLists.txt
source/Renderer/OpenGL3Plus/: CMakeLists.txt
source/Samples/: CMakeLists.txt
source/Samples/Common/: SampleApp.h  (+4 more)
source/System/: CMakeLists.txt
source/Tools/: CMakeLists.txt
source/Utils/: CMakeLists.txt
source/step01/: CMakeLists.txt
source/step02/: .gitignore  CMakeLists.txt
source/step03/: CMakeLists.txt
source/step04/: CMakeLists.txt
source/step07/: CMakeLists.txt
source/step08/: CMakeLists.txt
source/step09/: .gitignore  CMakeLists.txt
step01/source/: CMakeLists.txt  build_ios.sh
(+3022 files in other folders)
